setting git ignore

--- a/src/Assignment_5th/CMakeLists.txt
+++ b/src/Assignment_5th/CMakeLists.txt
@@ -9,7 +9,8 @@ add_executable(assignment5-1 Assignment_5th_1.cpp)
 add_executable(assignment5-2 Assignment_5th_2.cpp)
 add_executable(assignment5-3 Assignment_5th_3.cpp)
 add_executable(assignment5-4 Assignment_5th_4.cpp)
-# add_executable(assignment4-5 Assignment_4th_5.cpp)
+add_executable(assignment5-5 Assignment_5th_5.cpp)
+add_executable(assignment5-6 Assignment_5th_6.cpp)
 
 
 target_link_libraries(assignment5-1 ${OpenCV_LIBS})
@@ -20,3 +21,7 @@ target_link_libraries(assignment5-3 ${OpenCV_LIBS})
 target_include_directories(assignment5-3 PUBLIC ${OpenCV_LIBS})
 target_link_libraries(assignment5-4 ${OpenCV_LIBS})
 target_include_directories(assignment5-4 PUBLIC ${OpenCV_LIBS})
+target_link_libraries(assignment5-5 ${OpenCV_LIBS})
+target_include_directories(assignment5-5 PUBLIC ${OpenCV_LIBS})
+target_link_libraries(assignment5-6 ${OpenCV_LIBS})
+target_include_directories(assignment5-6 PUBLIC ${OpenCV_LIBS})
